syntax = "proto3";

package messages;

option go_package= "./messages";

message Ack {
  int64 ack = 1;
}

message Info{
    string name = 1;
    string lastname = 2;
}

message InfoState{
    Info info = 1;
    string from = 2;
    int32 state = 3;
}

message InfoID{
    Info info = 1;
    int64 id = 2;
}

message Ids{
    repeated int64 list = 1;
    int64 len = 2;
}

message Names{
    repeated Info list = 1;
    int64 len = 2;
}

message State{
    int32 value = 1;
}

service MessageService {
    rpc SendInfoState(InfoState) returns (Ack) {} // Continente -> OMS
    rpc SendInfoID(InfoID) returns (Ack) {} // OMS -> DataNode
    rpc SendRequestNamesByID(Ids) returns (Names) {} // OMS -> Datanode
    rpc SendRequestDeadOrAlive(State) returns (Names) {} // ONU -> OMS
}